Remove SUPPORT_CUSTOMIZE_VENDOR_PERMISSION
Remove the permission map entry for SUPPORT_CUSTOMIZE_VENDOR_PERMISSION
since it is not exposed as part of VehiclePropertyIds API.

Test: atest CarPropertyManagerTest#testSupportCustomizeVendorPermissionIfSupported
Bug: 286299987
Change-Id: If7110d9c467bcd7d222ad29db799d232bf4385db
Merged-In: If7110d9c467bcd7d222ad29db799d232bf4385db
(cherry picked from commit b0492007e30c4bfb6fcb1db3b36f5e19860a4392)